// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Measure
  metricKey="coverage"
  metricType="PERCENT"
  value="1.0"
/>
`;

exports[`renders correctly for leak values 1`] = `
<Measure
  metricKey="new_coverage"
  metricType="PERCENT"
  value="1.0"
/>
`;

exports[`renders correctly when component has no measures 1`] = `<span />`;

exports[`should render correctly for releasability rating 1`] = `
<Measure
  metricKey="alert_status"
  metricType="LEVEL"
  value="1.0"
/>
`;

exports[`should render correctly when no measure matches the metric 1`] = `
<span>
  —
</span>
`;
